attempting to create package using static libraries of QT and QWT.

--- a/data/menu/plotus.desktop
+++ b/data/menu/plotus.desktop
@@ -6,4 +6,4 @@ Exec=plotus
 Icon=plotus64
 Terminal=false
 Type=Application
-Categories=Application;Science;Mathematics;
+Categories=Application;Science;Math;Engineering;
