--- a/rsc/qt.conf
+++ b/rsc/qt.conf
@@ -1,8 +1,8 @@
 [Paths]
-Libraries=../lib/plotus
-
 #for unix shipping
+Libraries=../lib/plotus
 Plugins=../lib/plotus/plugins
 
-#for development
-#Plugins=lib/plugins
+#for unix development
+#Libraries=../plotus-0.5/lib
+#Plugins=../plotus-0.5/lib/plugins
